globus-ftp-control (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 14:25:18 -0500

globus-ftp-control (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 13:37:51 -0500

globus-ftp-control (5.2-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 13:06:47 -0500

globus-ftp-control (5.1-1+gt6.@distro@) @distro@; urgency=low

  * Pull in tests

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 12:09:12 -0500

globus-ftp-control (5.0-3+gt6.@distro@) @distro@; urgency=low

  * dependency

 -- Globus Toolkit <support@globus.org>  Mon, 03 Feb 2014 11:06:01 -0500

globus-ftp-control (5.0-2+gt6.@distro@) @distro@; urgency=low

  * Fix missing check for flex

 -- Globus Toolkit <support@globus.org>  Fri, 31 Jan 2014 08:40:08 -0500

globus-ftp-control (5.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 13:04:36 -0500

globus-ftp-control (4.7-1) unstable; urgency=low

  * GT-428: Improve handling of hanging GridFTP server processes - prevent missing force_close callback

 -- Globus Toolkit <support@globus.org>  Tue, 15 Oct 2013 00:45:54 -0500

globus-ftp-control (4.6-1) unstable; urgency=low

  * GT-366 fix delegation bug introduced in last release.

 -- Globus Toolkit <support@globus.org>  Wed, 06 Mar 2013 07:30:31 -0500

globus-ftp-control (4.5-1) unstable; urgency=low

  * GT-334: segfault using ftp control lib
  * GT-357: Extend globus_ftp_control_authenticate() to allow the caller to set req flags such as delegation.

 -- Globus Toolkit <support@globus.org>  Mon, 04 Feb 2013 10:32:38 -0600

globus-ftp-control (4.4-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-ftp-control (4.4-1) unstable; urgency=low
