@@ -1,3 +1,9 @@
+globus-ftp-control (5.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 14:55:22 -0500
+
 globus-ftp-control (5.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
